feat: production deployment config and CORS fix
- vite.config.ts: proxy target reads VITE_API_URL env var (fallback localhost:8081)
- config.ts: API_BASE_URL and WS_URL derived from VITE_API_URL at build time
- axios.ts: baseURL uses API_BASE_URL (empty string in dev = Vite proxy, full URL in prod)
- TriageLivePage, QueueDisplayPage: WebSocket uses WS_URL from config (fixes hardcoded ws://localhost:8080/ws)
- application.properties: ALLOWED_ORIGINS and FRONTEND_URL configurable via env vars
- SecurityConfig: CORS reads app.cors.allowed-origins instead of wildcard pattern

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>